--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                 <b>ENG YAXSHILARI</b>
             </div>
             <div class="works_container">
+                <div class="work wow fadeInRight">
+                    <img src="img/morkiuz_bot.png" alt="work" class="work_img">
+                    <h2 class="work_h">Morkiuz_bot</h2>
+                    <p>
+                        <span class="orange">Morkizuz_bot</span>: Morki.uz onlayn texnik xizmat ko'rsatish markazi uchun xizmat ko'rsatishni telegramga integratsiyalangan boti.
+                    </p>
+                </div>
                 <div class="work wow fadeInLeft">
                     <img src="img/rassilka.png" alt="work" class="work_img">
                     <h2 class="work_h">Rassilka WEB</h2>
