--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <b>ENG YAXSHILARI</b>
             </div>
             <div class="works_container">
-                <div class="work wow">
+                <div class="work wow fadeInRight">
                     <img src="img/morkiuz_bot.png" alt="work" class="work_img">
                     <h2 class="work_h">Morkiuz_bot</h2>
                     <p>
